--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ openai = "^0.27.2"
 python-dotenv = "^1.0.0"
 click = "^8.1.3"
 
+[tool.poetry.scripts]
+griseo = "griseo:main"
 
 [build-system]
 requires = ["poetry-core"]
