--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ description = "Chat with OpenAI in the Hacker way."
 authors = ["tison <wander4096@gmail.com>"]
 license = "Apache-2.0"
 readme = "README.md"
+homepage = "https://github.com/korandoru/griseo"
+repository = "https://github.com/korandoru/griseo"
+documentation = "https://github.com/korandoru/griseo"
+keywords = ["chatgpt", "cli", "openai"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
