--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,6 @@ jobs:
           poetry build
           poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }} 
           poetry publish
-          gh release upload --clobber ${{ steps.version.outputs.TAG_NAME }} dist/*.tar.gz dist/*.whl
+          gh release create --generate-notes --latest --verify-tag ${{ steps.version.outputs.TAG_NAME }} dist/*.tar.gz dist/*.whl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
