--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@
 
 [tool.poetry]
 name = "griseo"
-version = "0.8.0"
+version = "0.9.0"
 description = "Chat with OpenAI in the Hacker way."
 authors = ["tison <wander4096@gmail.com>"]
 license = "Apache-2.0"
@@ -28,6 +28,7 @@ keywords = ["chatgpt", "cli", "openai"]
 python = "^3.8"
 openai = "^0.27.4"
 python-dotenv = "^1.0.0"
+tenacity = "^8.2.2"
 
 [tool.poetry.scripts]
 griseo = "griseo:main"
